# SlintApp

./: CMakeLists.txt
sources/: main.cpp
sources/core/: base_services.cpp  base_services.h  connection.cpp  log.h  utils.cpp  utils.h
sources/services/: services_manager.h  utils_services.cpp  utils_services.h
sources/ui/: main.slint
